[gd_scene load_steps=12 format=3 uid="uid://dl6mhhb1nxgyf"]

[ext_resource type="Texture2D" uid="uid://48pefayol3a2" path="res://Sprites/StageObjects/fallingIcicle.png" id="1_72es0"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Obstacles/FallingIcicle.gd" id="1_yxoge"]
[ext_resource type="AudioStream" uid="uid://t327jyaqsy6y" path="res://Sounds/blockBreak.wav" id="3_1c81a"]
[ext_resource type="Texture2D" uid="uid://bkev1cpv7star" path="res://Sprites/StageObjects/debris.png" id="4_at4ip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1f4oo"]
atlas = ExtResource("1_72es0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt22h"]
atlas = ExtResource("1_72es0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vn5y"]
atlas = ExtResource("1_72es0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r00rl"]
atlas = ExtResource("1_72es0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_duypk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f4oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt22h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vn5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r00rl")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4ehc"]
size = Vector2(20, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgeaa"]
size = Vector2(20, 11)

[node name="FallingIcicle" type="Node2D"]
script = ExtResource("1_yxoge")

[node name="FallingIcicle" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_duypk")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="FallingIcicle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingIcicle/Area2D"]
shape = SubResource("RectangleShape2D_t4ehc")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 700)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1c81a")
volume_db = 8.0
pitch_scale = 1.25
max_distance = 500.0
bus = &"SoundEffects"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 17)
emitting = false
amount = 12
lifetime = 0.3
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
randomness = 0.95
lifetime_randomness = 1.0
texture = ExtResource("4_at4ip")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -2)
spread = 168.22
initial_velocity_min = 112.14
initial_velocity_max = 289.71
scale_amount_min = 0.2
scale_amount_max = 1.2
color = Color(0, 1, 1, 1)

[node name="DeathArea" type="Area2D" parent="."]

[node name="deathCol" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(0, 17.5)
shape = SubResource("RectangleShape2D_hgeaa")

[connection signal="body_entered" from="FallingIcicle/Area2D" to="." method="_on_area_2d_body_entered"]
